# TomatOS

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  create_iso.sh  grub.cfg  test.elf  ys
.github/workflows/: tomatos.yml
config/: boot.yaml  image.yaml  linker.ld  multiboot.grub.cfg  multiboot.ld  multiboot2.grub.cfg  tomatboot.cfg
drivers/ahci/: main.c
drivers/atrtc/: driver.mk  main.c
drivers/disk/: ata_spec.h
drivers/ps2/: driver.mk  main.c
initrd/: Makefile  test.c  test.elf
kernel/: README.md  entry.c  kernel.c  kernel.h  linker.ld  main.c  main.h  multiboot.asm
kernel/acpi/: acpi.c  acpi.h
kernel/arch/: cpu.c  cpu.h  gdt.c  idt.c  idt.h  intrin.c  intrin.h  ints.h  io.c  io.h  mm.h  pmm.c  pmm.h  stivale2.c  stivale2.h  timing.c  timing.h  vmm.h
kernel/common/: buf.c  buf.h  common.h  ctype.h  except.c  except.h  global_except.h  kernel_info.h  klib.c  klib.h  logging.c  logging.h  map.c  map.h  mini-printf.c  mini-printf.h  multiboot.h  stdarg.h  stdbool.h  stdint.h  string.c  string.h
kernel/cont/: list.c  list.h  slist.c  slist.h
kernel/cpu/: control.h  cpuid.h  msr.h  rflags.h
kernel/debug/: debug.c  debug.h  early_console.c  early_console.h  ssp.c  ubsan.c
kernel/driver/: driver.c  driver.h
kernel/drivers/: pci.c  pci.h  pic.asm  pic.c  pic.h  pit.c  pit.h  portio.h  qemu.c  qemu.h  rtc.c  rtc.h
kernel/graphics/: font.c  font.h  term.c  term.h
kernel/interrupts/: idt.c  idt.h  interrupts.asm  interrupts.h  irq.asm  irq.c  irq.h  isr.asm  isr.c  isr.h
kernel/locks/: critical_section.h  rwlock.h  spinlock.h
kernel/mem/: mm.c  mm.h  pmm.c  pmm.h  tlsf.c  tlsf.h  vmm.c  vmm.h
kernel/memory/: gdt.h  mm.c  mm.h  pmm.c  pmm.h  virtual_memory_manager.c  virtual_memory_manager.h  vmm.asm  vmm.c  vmm.h
kernel/proc/: event.c  event.h  handle.c  handle.h  proc.c  proc.h  process.c  process.h  scheduler.c  scheduler.h
kernel/process/: process.c  process.h  resource.h  rflags.h  scheduler.c  scheduler.h  spinlock.h  syscall.asm  syscall.c  syscall.h  syscalls.h  thread.c  thread.h
kernel/providers/: invokes.h
kernel/resource/: resource.c  resource.h  resource_manager.asm  resource_manager.c  resource_manager.h
kernel/shell/: shell.c  shell.h
kernel/sync/: critical.c  critical.h  lock.c  lock.h
kernel/task/: async.h  event.c  event.h  sched.c  sched.h  task.c  task.h  tpl.c
kernel/util/: cpp_magic.h  debug.h  defs.h  err.h  except.c  except.h  list.c  list.h  macro.h  map.h  printf.c  stb_ds.h  string.c  string.h  trace.c  trace.h
lib/: elf64.h  elf_common.h  stivale.h  tboot.h
lib/common/: buf.c  buf.h  common.h  elf_common.h  error.c  error.h  hash.h  map.c  map.h  vsnprintf.c  vsnprintf.h
lib/libc/: __stddef_max_align_t.h  assert.h  ctype.h  limits.h  stdalign.h  stdarg.h  stdatomic.h  stdbool.h  stddef.h  stdint.h  stdlib.c  stdlib.h  stdnoreturn.h  string.c  string.h
lib/stb/: stb.c  stb_ds.h  stb_sprintf.h
lib/tlsf/: tlsf.c  tlsf.h
lib/tomato/: resource.h
makefiles/: image.mk
makefiles/amd64/: consts.mk  image.mk  linker.ld  targets.mk
root/: Makefile  test.c  test.elf
scripts/: generate_symbols.py  linker.ld  run.bat  run.sh  run_debug.bat  trace2funcs.py
src/: README.md  bootstub.asm  main.c  main.cpp  tomatboot_stub.asm
src/acpi/: acpi.c  acpi.h  lai_host.c  laihost.c
src/arch/: cpuid.cpp  cpuid.h  cpuid.hpp  gdt.cpp  gdt.hpp  idt.asm  idt.cpp  idt.hpp  intrin.c  intrin.cpp  intrin.h  intrin.hpp  io.cpp  io.hpp  msr.c  msr.cpp  msr.h  msr.hpp  paging.h  simd.c  simd.h  sync.cpp  sync.hpp
src/boot/: README.md  allocator.c  allocator.h  boot.h  multiboot.asm  multiboot.h
src/compo/: component.c  component.h
src/crypto/: sha1.c  sha1.h
src/drivers/: device.h  partition.c  partition.h  portio.h  registers.h  storage_object.c  storage_object.h
src/event/: event.c  event.h
src/helpers/: portio.h
src/interrupts/: idt.c  idt.h  interrupts.c  interrupts.h  irq.asm  irq.c  irq.h  isr.asm  isr.c  isr.h  isrs.asm  isrs.h  timer.asm  timer.c  timer.h
src/intr/: common_handler.cpp  idt.c  idt.h  interrupts.hpp  intr.c  intr.h  isrs.asm  isrs.h
src/logger/: logger.c  logger.h
src/mem/: mm.cpp  mm.hpp  pmm.cpp  pmm.hpp  vmm.cpp  vmm.hpp
src/memory/: gdt.asm  gdt.c  gdt.h  mm.c  mm.h  pmm.c  pmm.h  vmm.c  vmm.h  vmm_allocator.c
src/mm/: gdt.asm  gdt.c  gdt.h  memmap.txt  mm.c  mm.h  pmm.c  pmm.h  stack_allocator.c  stack_allocator.h  umm.c  vmm.c  vmm.h
src/net/: arp.c  arp.h  ether.c  ether.h  netstack.c  netstack.h  netstack_frame.c  peer.c  peer.h
src/objects/: display.h  filesystem.h  network.h  object.c  object.h  objects.c  objects.h  screen.h  storage.h
src/pci/: conventional.c  conventional.h  pci.c  pci.h  pci_bar_spec.h  pci_bridge_spec.h  pci_caps_spec.h  pci_common_spec.h  pci_device_spec.h  pci_ids.h  pci_msi_spec.h  pcie.c
src/proc/: elf.c  elf.h  handle.c  handle.h  process.c  process.cpp  process.h  process.hpp  sched.c  sched.h  syscall.asm  syscall.c  syscall.h  thread.c  thread.cpp  thread.h  thread.hpp
src/process/: process.c  process.h  scheduler.c  scheduler.h  signal.asm  signal.c  signal.h  syscalls.h  thread.c  thread.h
src/processes/: event.c  event.h  process.c  process.h  scheduler.c  scheduler.h  syscall.asm  syscall.c  syscall.h  syscalls.h  thread.c  thread.h
src/resource/: resource.c  resource.h  resource_provider.c  resource_provider.h
src/resources/: driver.c  driver.h  resource.c  resource.h
src/smp/: cpustorage.c  cpustorage.h  pcpu.c  pcpu.h  percpu_storage.c  percpu_storage.h  percpustorage.c  percpustorage.h  smp.c  smp.h  trampoline.asm  trampoline.real
src/sync/: spinlock.c  spinlock.h
src/sys/: pci.c  pci.h  pci_spec.h
src/timer/: timer.c  timer.h
src/util/: arch.c  arch.h  array.hpp  cpp_runtime.cpp  cpp_runtime.h  critical_section.cpp  critical_section.hpp  debug.c  debug.cpp  debug.h  debug.hpp  def.h  defs.h  error.h  except.c  except.h  except.hpp  kernel_debugger.c  kernel_debugger.h  list.c  list.h  list_entry.cpp  list_entry.hpp  map.hpp  poke.h  (+13 more)
tools/: image.yaml  limine-install  tomatboot.cfg
(+276 files in other folders)
